--- a/project_sense_and_act/pom.xml
+++ b/project_sense_and_act/pom.xml
@@ -5,4 +5,18 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>project_sense_and_act</name>
   <description>project_sense_and_act</description>
+	   <dependencies>
+		  	<dependency>
+			    <groupId>log4j</groupId>
+			    <artifactId>log4j</artifactId>
+			    <version>1.2.12</version>
+			</dependency>
+	        <dependency>
+	            <groupId>junit</groupId>
+	            <artifactId>junit</artifactId>
+	            <version>4.12</version>
+	            <scope>test</scope>
+			</dependency>
+	  </dependencies>
 </project>
+ 
