--- a/project_sense_and_act/pom.xml
+++ b/project_sense_and_act/pom.xml
@@ -18,5 +18,24 @@
 	            <scope>test</scope>
 			</dependency>
 	  </dependencies>
+	  
+	  <build>
+			<plugins>
+				<plugin>
+				    <groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-surefire-plugin</artifactId>
+				    <version>2.19.1</version>
+				    <configuration>
+                    <includes>
+                        <include>testme.java</include>                  
+                    </includes>
+                    </configuration>
+				 </plugin>
+
+			</plugins>
+	</build>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 </project>
  
