--- a/project_sense_and_act/pom.xml
+++ b/project_sense_and_act/pom.xml
@@ -17,6 +17,41 @@
 	            <version>4.12</version>
 	            <scope>test</scope>
 			</dependency>
+			<dependency>
+			    <groupId>net.serenity-bdd</groupId>
+			    <artifactId>serenity-jira-plugin</artifactId>
+			    <version>1.1.1</version>
+			</dependency>
+			<dependency>
+			    <groupId>net.serenity-bdd</groupId>
+			    <artifactId>serenity-core</artifactId>
+			    <version>1.1.3</version>
+			</dependency>
+			<dependency>
+			    <groupId>info.cukes</groupId>
+			    <artifactId>cucumber-java</artifactId>
+			    <version>1.2.4</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.seleniumhq.selenium</groupId>
+			    <artifactId>selenium-java</artifactId>
+			    <version>2.46.0</version>
+			</dependency>
+		<dependency>
+			    <groupId>net.serenity-bdd</groupId>
+			    <artifactId>serenity-cucumber</artifactId>
+			    <version>1.1.3</version>
+			</dependency>
+			<dependency>
+			    <groupId>net.serenity-bdd</groupId>
+			    <artifactId>serenity-junit</artifactId>
+			    <version>1.1.20</version>
+			</dependency>
+			<dependency>
+			    <groupId>net.serenity-bdd</groupId>
+			    <artifactId>serenity-core</artifactId>
+			    <version>1.1.21</version>
+			</dependency>
 	  </dependencies>
 	  
 	  <build>
@@ -27,11 +62,50 @@
 				    <version>2.19.1</version>
 				    <configuration>
                     <includes>
-                        <include>testme.java</include>                  
+
+                        <include>**/AcceptanceTestSuite</include>                  
                     </includes>
                     </configuration>
 				 </plugin>
-
+				<plugin>
+			        <groupId>org.apache.maven.plugins</groupId>
+			        <artifactId>maven-failsafe-plugin</artifactId>
+			        <version>2.19.1</version>
+					<configuration>
+                    	<includes>
+                    		<include>**/AcceptanceTestSuite</include>
+                    	</includes>
+                    </configuration>
+			        <executions>
+			          <execution>
+			            <goals>
+			              <goal>integration-test</goal>
+			              <goal>verify</goal>
+			            </goals>
+			          </execution>
+			        </executions>
+			     </plugin>
+			     <plugin>
+			     	<groupId>net.serenity-bdd.maven.plugins</groupId>
+				    <artifactId>serenity-maven-plugin</artifactId>
+				    <version>1.1.34</version>
+				    <dependencies>
+							<dependency>
+							    <groupId>net.serenity-bdd</groupId>
+							    <artifactId>serenity-core</artifactId>
+							    <version>1.1.21</version>
+							</dependency>		          			
+				    </dependencies>
+				    <executions>
+				    	<execution>
+                        <id>serenity-reports</id>
+                        <phase>post-integration-test</phase>             
+                        <goals>
+                            <goal>aggregate</goal>                       
+                        </goals>
+                    </execution>
+				    </executions>
+			     </plugin>
 			</plugins>
 	</build>
 	<properties>
