--- a/project_sense_and_act/serenity.properties
+++ b/project_sense_and_act/serenity.properties
@@ -1,9 +1,10 @@
 webdriver.base.url =https://www.google.co.in
-webdriver.driver=firefox
+webdriver.driver=iexplorer
 serenity.project.name=Project sense and act
-serenity.dry.run=false
+#serenity.dry.run=false
 webdriver.timeouts.implicitywait=10000
 serenity.take.screenshots=FOR_EACH_ACTION
-webdriver.chrome.driver=path to chrome driver
+#webdriver.chrome.driver=path to chrome driver
 thucycides.step.delay=1000
 serenity.store.html.source=true
+serenity.outputDirectory=target/site/serenity
